# advent_of_code_2022

./: .flake8  .pre-commit-config.yaml  Readme.md  pyproject.toml
day1/: day1.py  day1_part2.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day14/: day14.py  day14_optimized.py
day15/: day15.py
day2/: day2.py  day2_part2.py
day20/: day20.py  day20_v2.py
day22/: day22.py  test.py
day23/: day23.py
day3/: day3.py  day3_part2.py
day4/: day4.py  day4_part2.py
day5/: day5.py  day5_part2.py
day6/: day6.py
day7/: day7.py
day8/: day8.py  day8_part2.py
day9/: day9.py
